--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         }
     ],
     "require": {
-        "aura/router": "^3.1"
+        "aura/router": "^3.1",
+        "zendframework/zend-diactoros": "^2.1"
     }
 }
