--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "autoload": {
         "psr-4": {
-        "App\\": "src/"
+        "App\\": "src/",
+        "App\\Connection\\" : "src/connection/"
         }
     },
 
@@ -14,6 +15,7 @@
     ],
     "require": {
         "aura/router": "^3.1",
-        "zendframework/zend-diactoros": "^2.1"
+        "zendframework/zend-diactoros": "^2.1",
+        "ramsey/uuid": "^3.8"
     }
 }
