--- a/configsample.json
+++ b/configsample.json
@@ -1,4 +1,10 @@
 {
-	"opt": {"3":2},
-	"connect":"'pgsql:host=localhost;port=5432;dbname=dbname;', \"postgres\", \"password\", $opt"
+	"opt": {"\\PDO::ATTR_ERRMODE": "\\PDO::ERRMODE_EXCEPTION"},
+	"dbtype": "pgsql",
+	"host": "localhost",
+	"port": "5432", 
+	"database": "todo",
+	"user": "postgres",
+	"password": "password"
+
 }
