--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "autoload": {
         "psr-4": {
         "App\\": "src/",
-        "App\\Connection\\" : "src/connection/"
+        "App\\Connection\\" : "src/connection/",
         }
     },
 
